# openstack-ansible-os_monasca

./: .gitignore  .gitreview  CHANGELOG  CONTRIBUTING.rst  LICENSE  README.md  README.rst  Vagrantfile  bindep.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
defaults/: main.yml
doc/: Makefile  requirements.txt
examples/: monasca-dependencies.yml  playbook.yml
extras/: ansible-role-requirements.yml  haproxy_monasca.yml  os-monasca-install.yml  user_haproxy_extras.yml  user_secrets.yml
handlers/: main.yml
meta/: main.yml  openstack-ansible.yml
tasks/: configure.yml  configure_grafana.yml  configure_graphana.yml  configure_influxdb.yml  configure_kafka.yml  configure_storm.yml  configure_zookeeper.yml  install.yml  install_go.yml  install_grafana.yml  install_graphana.yml  install_influxdb.yml  install_kafka.yml  install_storm.yml  install_zookeeper.yml  main.yml  main.yml-r  monasca_alarms_setup.yml  monasca_db_setup.yml  monasca_db_setup.yml-r  monasca_influxdb_setup.yml  monasca_init.yml  monasca_init_common.yml  monasca_init_systemd.yml  monasca_init_upstart.yml  monasca_install.yml  monasca_install_apt.yml  monasca_install_dependencies.yml  monasca_kafka_setup.yml  monasca_mysql_setup.yml  monasca_post_install.yml  monasca_pre_install.yml  monasca_service_setup.yml  monasca_thresh_install.yml  post-install.yml  pre-grafana-install.yml  pre-influxdb-install.yml  pre-install.yml  pre-kafka-install.yml  pre-monasca-install.yml  (+2 more)
templates/: mon_mysql.sql.j2  monasca-api-logging.conf.j2  monasca-api-paste.ini.j2  monasca-api.conf.j2  (+11 more)
(+75 files in other folders)
