[metadata]
name = openstack-ansible-os_monasca
summary = Monitoring-as-a-Service for OpenStack Ansible
description-file =
    README.rst
author = IS Open Cloud
author-email = is.cloud.infrastructure.opencloud@is.co.za
home-page = http://www.is.co.za/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
