[metadata]
name = openstack-ansible-os_monasca
summary = os_monasca for OpenStack Ansible
description-file =
    README.rst
author = IS Open Cloud
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/openstack-ansible-os_monasca/latest
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
